Adding XLarge preprocessing with tfhub preprocessor

--- a/ALBERT_XLarge_implementation.ipynb
+++ b/ALBERT_XLarge_implementation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ALBERT_XLarge_implementation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzlPquHzpj123gsU8fwIGc",
+      "authorship_tag": "ABX9TyPQcBu92I88JHrHS3k+moNl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,78 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "cH_HXl7NVGyJ",
+        "outputId": "fa0b4f89-1ac1-455e-87b5-a47f45889db3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!pip install tensorflow_text\r\n",
+        "import tensorflow_text as text "
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting tensorflow_text\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/a0/86/22ad798f94d564c3e423758b60ddd3689e83ad629b3f31ff2ae45a6e3eed/tensorflow_text-2.4.3-cp36-cp36m-manylinux1_x86_64.whl (3.4MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.4MB 11.1MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tensorflow<2.5,>=2.4.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow_text) (2.4.1)\n",
+            "Requirement already satisfied: tensorflow-hub>=0.8.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow_text) (0.11.0)\n",
+            "Requirement already satisfied: opt-einsum~=3.3.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (3.3.0)\n",
+            "Requirement already satisfied: flatbuffers~=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.12)\n",
+            "Requirement already satisfied: keras-preprocessing~=1.1.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.1.2)\n",
+            "Requirement already satisfied: numpy~=1.19.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.19.5)\n",
+            "Requirement already satisfied: gast==0.3.3 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (0.3.3)\n",
+            "Requirement already satisfied: h5py~=2.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (2.10.0)\n",
+            "Requirement already satisfied: astunparse~=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.6.3)\n",
+            "Requirement already satisfied: six~=1.15.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.15.0)\n",
+            "Requirement already satisfied: tensorboard~=2.4 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (2.4.1)\n",
+            "Requirement already satisfied: typing-extensions~=3.7.4 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (3.7.4.3)\n",
+            "Requirement already satisfied: wrapt~=1.12.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.12.1)\n",
+            "Requirement already satisfied: wheel~=0.35 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (0.36.2)\n",
+            "Requirement already satisfied: tensorflow-estimator<2.5.0,>=2.4.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (2.4.0)\n",
+            "Requirement already satisfied: grpcio~=1.32.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.32.0)\n",
+            "Requirement already satisfied: protobuf>=3.9.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (3.12.4)\n",
+            "Requirement already satisfied: termcolor~=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (1.1.0)\n",
+            "Requirement already satisfied: google-pasta~=0.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (0.2.0)\n",
+            "Requirement already satisfied: absl-py~=0.10 in /usr/local/lib/python3.6/dist-packages (from tensorflow<2.5,>=2.4.0->tensorflow_text) (0.10.0)\n",
+            "Requirement already satisfied: tensorboard-plugin-wit>=1.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (1.8.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (3.3.3)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (53.0.0)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (2.23.0)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (1.0.1)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (0.4.2)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (1.25.0)\n",
+            "Requirement already satisfied: importlib-metadata; python_version < \"3.8\" in /usr/local/lib/python3.6/dist-packages (from markdown>=2.6.8->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (3.4.0)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (2.10)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (2020.12.5)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (1.3.0)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (4.2.1)\n",
+            "Requirement already satisfied: rsa<5,>=3.1.4; python_version >= \"3.6\" in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (4.7)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (0.2.8)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.6/dist-packages (from importlib-metadata; python_version < \"3.8\"->markdown>=2.6.8->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (3.4.0)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (3.1.0)\n",
+            "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.6/dist-packages (from rsa<5,>=3.1.4; python_version >= \"3.6\"->google-auth<2,>=1.6.3->tensorboard~=2.4->tensorflow<2.5,>=2.4.0->tensorflow_text) (0.4.8)\n",
+            "Installing collected packages: tensorflow-text\n",
+            "Successfully installed tensorflow-text-2.4.3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JhXSEZvoSTFW",
-        "outputId": "4dcb25db-87b7-4674-a11b-1df44aa875ce"
+        "outputId": "4339c5b9-f0a8-41b5-b68f-0c6deabf2169"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -74,35 +141,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "of3MxH4bSeiM",
-        "outputId": "3a58c802-07e2-456b-f0fc-9dec8342f1f4"
-      },
-      "source": [
-        "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
-        "!pip install sentencepiece\r\n",
-        "import tokenization"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Collecting sentencepiece\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/14/67/e42bd1181472c95c8cda79305df848264f2a7f62740995a46945d9797b67/sentencepiece-0.1.95-cp36-cp36m-manylinux2014_x86_64.whl (1.2MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.2MB 8.3MB/s \n",
-            "\u001b[?25hInstalling collected packages: sentencepiece\n",
-            "Successfully installed sentencepiece-0.1.95\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "VgpIFiqBSoOk"
       },
       "source": [
@@ -112,64 +150,7 @@
         "# pooled_output = albert_outputs[\"pooled_output\"]\r\n",
         "# sequence_output = albert_outputs[\"sequence_output\"]"
       ],
-      "execution_count": 19,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "sZ7Ok2pVTCCk"
-      },
-      "source": [
-        "def albert_encode(texts, tokenizer, max_len=512):\r\n",
-        "    all_tokens = []\r\n",
-        "    all_masks = []\r\n",
-        "    all_segments = []\r\n",
-        "    \r\n",
-        "    for text in texts:\r\n",
-        "        text = tokenizer.tokenize(text)\r\n",
-        "            \r\n",
-        "        text = text[:max_len-2]\r\n",
-        "        input_sequence = [\"[CLS]\"] + text + [\"[SEP]\"]\r\n",
-        "        pad_len = max_len - len(input_sequence)\r\n",
-        "        \r\n",
-        "        tokens = tokenizer.convert_tokens_to_ids(input_sequence)\r\n",
-        "        tokens += [0] * pad_len\r\n",
-        "        pad_masks = [1] * len(input_sequence) + [0] * pad_len\r\n",
-        "        segment_ids = [0] * max_len\r\n",
-        "        \r\n",
-        "        all_tokens.append(tokens)\r\n",
-        "        all_masks.append(pad_masks)\r\n",
-        "        all_segments.append(segment_ids)\r\n",
-        "    \r\n",
-        "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
-      ],
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "p6VvpPT-TGGL"
-      },
-      "source": [
-        "def build_model(bert_layer, max_len=512):\r\n",
-        "    input_word_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"input_word_ids\")\r\n",
-        "    input_mask = Input(shape=(max_len,), dtype=tf.int32, name=\"input_mask\")\r\n",
-        "    segment_ids = Input(shape=(max_len,), dtype=tf.int32, name=\"segment_ids\")\r\n",
-        "\r\n",
-        "    pooled_output, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\r\n",
-        "    clf_output = pooled_output\r\n",
-        "    out = Dense(100, activation='relu')(clf_output)\r\n",
-        "    out = Dense(100, activation='relu')(out)\r\n",
-        "    out = Dense(6, activation='softmax')(out)\r\n",
-        "    \r\n",
-        "    model = Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=out)\r\n",
-        "    model.compile(Adam(lr=2e-6), loss='binary_crossentropy', metrics=['accuracy'])\r\n",
-        "    \r\n",
-        "    return model"
-      ],
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -179,13 +160,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "382df22d-cb8c-491c-9f19-6a4254bcfc0f"
+        "outputId": "5814fb2a-a80e-44a3-dfba-d528455ec643"
       },
       "source": [
         "from google.colab import drive\r\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +196,7 @@
         "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
         "    test_convlen = pickle.load(f)"
       ],
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -241,7 +222,7 @@
         "      processed_label.append(j)\r\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -253,7 +234,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\r\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -267,7 +248,7 @@
         "for i in range(0,len(test_processed_data)):\r\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -276,10 +257,10 @@
         "id": "Pa5Q4L3JTrJl"
       },
       "source": [
-        "with open('/content/processed_data.pkl', 'rb') as f:\r\n",
-        "    processed_data = pickle.load(f)\r\n",
-        "with open('/content/processed_label.pkl', 'rb') as f:\r\n",
-        "    processed_label = pickle.load(f)"
+        "# with open('/content/processed_data.pkl', 'rb') as f:\r\n",
+        "#     processed_data = pickle.load(f)\r\n",
+        "# with open('/content/processed_label.pkl', 'rb') as f:\r\n",
+        "#     processed_label = pickle.load(f)"
       ],
       "execution_count": null,
       "outputs": []
@@ -293,7 +274,7 @@
         "import keras\r\n",
         "from keras.utils import to_categorical"
       ],
-      "execution_count": 16,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -307,34 +288,36 @@
         "Y=to_categorical(processed_label, num_classes=6)\r\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 17,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CzY7FHmNKuEQ",
-        "outputId": "387440b2-2589-4f57-bbfd-37d0ff21f6d1",
+        "id": "JyRX5sX0lqEp",
+        "outputId": "96e814b2-cc7f-41ab-db31-e79cd643005d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 178
+          "height": 212
         }
       },
       "source": [
-        "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
-        "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)"
+        "train_input = albert_encode(processed_data, tokenizer, max_len=160)\r\n",
+        "test_input = albert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
+        "train_labels = Y\r\n",
+        "test_labels = test_Y"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "AttributeError",
+          "ename": "NameError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-20-1d3971f5e9a9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msp_model_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malbert_layer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresolved_object\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msp_model_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masset_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenization\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFullSentencePieceTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msp_model_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'AutoTrackable' object has no attribute 'sp_model_file'"
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-19-a35190bb9709>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malbert_encode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprocessed_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m160\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malbert_encode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_processed_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_len\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m160\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtrain_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtest_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_Y\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'tokenizer' is not defined"
           ]
         }
       ]
