Albert Xlarge full implementation

--- a/ALBERT_XLarge_implementation.ipynb
+++ b/ALBERT_XLarge_implementation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ALBERT_XLarge_implementation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM7c3htRDJBUjq9W2pchMMI",
+      "authorship_tag": "ABX9TyNYACcMpkQdgQ/o4XvsGplI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JhXSEZvoSTFW",
-        "outputId": "17e2b5f3-eea3-42f5-b967-278c543f87b8"
+        "outputId": "95ef92a3-82a4-4dcf-e44b-8e024e3611fc"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -121,18 +121,19 @@
         "import pickle\r\n",
         "from sklearn.metrics import f1_score\r\n",
         "from sklearn.metrics import accuracy_score\r\n",
+        "from keras.utils.np_utils import to_categorical  \r\n",
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ],
           "name": "stdout"
         }
@@ -217,11 +218,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iIfQPicE5lky",
-        "outputId": "f436da05-e5d7-46b0-8961-a995f158ce26",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iIfQPicE5lky",
+        "outputId": "f436da05-e5d7-46b0-8961-a995f158ce26"
       },
       "source": [
         "model = build_model(encoder)\r\n",
@@ -258,6 +259,185 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Uj5h3coi73h1",
+        "outputId": "993ad0ab-00ac-485d-d4a8-8682a254fed2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zSu-Ey8y8AMe"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
+        "    data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
+        "    labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\r\n",
+        "    test_data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\r\n",
+        "    test_labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/train/conversation_length.pkl', 'rb') as f:\r\n",
+        "    train_convlen = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
+        "    test_convlen = pickle.load(f)"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oxnnhtfb8EZf"
+      },
+      "source": [
+        "def preprocessing(data,labels):\r\n",
+        "  processed_data=[]\r\n",
+        "  processed_label=[]\r\n",
+        "  for i in range(0,len(data)):\r\n",
+        "    for j in range(0,len(data[i])):\r\n",
+        "      intermediate_data=[]\r\n",
+        "      intermediate_label=[]\r\n",
+        "      for k in range(0,len(data[i][j])):\r\n",
+        "        text=data[i][j][k]\r\n",
+        "        if text != '<eos>'and text!='<pad>':\r\n",
+        "          intermediate_data.append(text)\r\n",
+        "      processed_data.append(intermediate_data)\r\n",
+        "  for i in labels:\r\n",
+        "    for j in i:\r\n",
+        "      processed_label.append(j)\r\n",
+        "  return processed_data,processed_label"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jyAGVCyh8GZM"
+      },
+      "source": [
+        "processed_data,processed_label = preprocessing(data,labels)\r\n",
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GYNTP8an8It9"
+      },
+      "source": [
+        "for i in range(0,len(processed_data)):\r\n",
+        "  processed_data[i]= ' '.join(processed_data[i])\r\n",
+        "for i in range(0,len(test_processed_data)):\r\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XmDuB3QC8KfY"
+      },
+      "source": [
+        "processed_data=np.asarray(processed_data)\r\n",
+        "test_processed_data=np.asarray(test_processed_data)\r\n",
+        "Y=to_categorical(processed_label, num_classes=6)\r\n",
+        "test_Y=to_categorical(test_processed_label, num_classes=6)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-IwFZf1o8yXv"
+      },
+      "source": [
+        "train_input = processed_data\r\n",
+        "test_input = test_processed_data\r\n",
+        "train_labels = Y\r\n",
+        "test_labels = test_Y"
+      ],
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SmaDYdEs9SPW",
+        "outputId": "61d5fcff-7bff-44a1-9177-92635169b2e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_history = model.fit(\r\n",
+        "    train_input, train_labels,\r\n",
+        "    epochs=6,\r\n",
+        "    batch_size=1\r\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/6\n",
+            "1067/4699 [=====>........................] - ETA: 23:47 - loss: 1.7617 - accuracy: 0.2212"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lNsFfu2g9Uu-"
+      },
+      "source": [
+        "y_pred=model.predict(test_input, batch_size=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q4HpvCpz93Gu"
+      },
+      "source": [
+        "y_pred1=np.argmax(y_pred,axis=1)\r\n",
+        "test_processed_label=np.asarray(test_processed_label)\r\n",
+        "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
+        "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
